<resources>
    <string name="app_name">EasyCheck</string>

    <!-- MENU -->

    <string name="menu_qr">Lector QRCode</string>
    <string name="menu_dni">Buscador DNI</string>
    <string name="menu_loc">Buscador Localitzador</string>
    <string name="menu_services">Serveis Pendents</string>
    <string name="menu_replacement">Substitucions</string>
    <string name="menu_settings">Configuració</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_filter">Filtrar Serveis</string>

    <!-- PREFERENCES -->

    <string name="pref_autofocus_label">Auto-Focus</string>
    <string name="pref_autofocus_key" translatable="false">kAutoFocus</string>
    <string name="pref_show_true">Engegat</string>
    <string name="pref_show_false">Apagat</string>
    <string name="pref_camera_category">Configuració de la camara</string>
    <string name="pref_bookings_category">Configuració del gestor de reserves</string>

    <string name="pref_auto_ckeckin_label">Check-in Automàtic</string>
    <string name="pref_auto_ckeckin_key">autocheckin</string>

    <string name="pref_cerca_default_labels">Preferencia de cerques</string>

    <!-- LIST PREFERENCES -->

    <!-- Gestor de reserves -->
    <string name="pref_manager_default_label">Gestor de reserves per defecte</string>
    <string name="pref_manager_default_key" translatable="false">defaultmanager</string>
    <string name="pref_manager_default_qr_label">QRCode Scanner</string>
    <string name="pref_manager_default_dni_label">Búsqueda DNI</string>
    <string name="pref_manager_default_loc_label">Búsqueda Localitzador</string>
    <string name="pref_manager_default_qr_value" translatable="false">qrscanner</string>
    <string name="pref_manager_default_dni_value" translatable="false">dni_serach</string>
    <string name="pref_manager_default_loc_value" translatable="false">loc_serach</string>

    <!-- Misc -->

    <string name="camera_permission_denied">Permissos insuficients</string>
    <string name="scanner_result" translatable="false">xScanningResult</string>
    <string name="auto_focus_extra" translatable="false">xAutoFocus</string>

    <!-- Menú Filtres -->
    <string name="menu_date_picker">Seleccionar Data</string>
    <string name="spinner_treballadors">Selecciona Treballador</string>
    <string name="filter">Filtres: </string>
    <string name="menu_time_picker">Seleccionar hora</string>
    <string name="filter_cancell">cancelar filtros</string>

    <string name="pref_server_category">Configuració del servidor</string>
    <string name="pref_host_key">kHost</string>
    <string name="pref_host_label">Adreça del servidor:</string>
    <!--<string name="pref_host_default">10.0.2.2</string>-->
    <string name="pref_host_default">192.168.1.4</string>
    <string name="pref_port_key">kPort</string>
    <string name="pref_port_title">Port del servidor:</string>
    <string name="pref_port_default">8080</string>

<!-- string per a substitucioActionActivity-->
    <string name="textview">TextView</string>
    <string name="textViewdata">textViewdata</string>
    <string name="textViewHora_inici">textViewHora_inici</string>
    <string name="textViewHora_fi">textViewHora_fi</string>
    <string name="acceptar">ACCEPTAR</string>
    <string name="cancelar">CANCEL.LAR</string>
    <string name="CANCELAR">CANCELAR</string>
    <string name="sustitucio_titol">Substitució</string>
    <string name="imatge">imatge</string>



</resources>
