<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/cancelar_filtros"
        android:icon="@drawable/ic_delete"
        android:title="@string/filter_cancell"
        app:showAsAction="always" />
    <item
        android:id="@+id/seleccionar_hora"
        android:icon="@drawable/ic_time"
        android:title="@string/menu_time_picker"
        app:showAsAction="always" />

    <item
        android:id="@+id/seleccionar_data"
        android:icon="@drawable/ic_calendar"
        android:title="@string/menu_date_picker"
        app:showAsAction="always" />
    <item
        android:id="@+id/spinner_de_treballadors"
        android:theme="?attr/actionBarTheme"
        android:title="@string/spinner_treballadors"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="always" />




</menu>